--- a/chap4.tex
+++ b/chap4.tex
@@ -1,6 +1,6 @@
 \chapter{Particle-in-Cell Simulations of Enhanced Target Normal Sheath Acceleration} \label{ch:4}
 
-This chapter details the work I did in conducting \gls{PIC} simulations to better understand the \gls{eTNSA} experiments at \gls{LLNL} by Nathaniel Tamminga, Joseph Snyder, and John Morrison in March of 2024. They worked at Titan which is housed in the \gls{JLF} for 5-6 weeks using their earned ``shot time'' through a LaserNet proposal. I will mostly focus on the simulation aspect of the project, but include some relevant comparisons to the experiment as needed. 
+This chapter details the work I did in conducting \gls{PIC} simulations to better understand the \gls{eTNSA} experiments at \gls{LLNL} by Nathaniel Tamminga, Joseph Snyder, and John Morrison in March of 2024. They worked at Titan (which is housed in the \gls{JLF}) for 5-6 weeks using their earned LaserNetUS \emph{shot time}. I will mostly focus on the simulation aspect of the project, but include some relevant comparisons to the experiment as needed. 
 
 \section{Background}
 
@@ -13,7 +13,7 @@ This chapter details the work I did in conducting \gls{PIC} simulations to bette
 	\label{fig:markey_spectrum}
 \end{figure}
 
-As explained in \cref{sec:tnsa_opt}, there is generally an optimal level of pre-expansion of the target to maximize the \gls{TNSA} proton energies \cite{McKenna_2008_LaPB,Fuchs_2007_PRL}. While the pre-expansion could be due to a low contrast pulse, it could also be due to an artificially injected pre-pulse whose intensity and temporal delay are tunable. Robinson et. al. \cite{Robinson_2007_PPCF} first addresses the idea of using multiple high intensity 40 fs laser pulses with the first being one-tenth to one-quarter of the intensity of the second. They termed this novel two-stage process \emph{multiple pulse sheath acceleration}. This study actually found a reduction in peak proton energy through numerical simulations, but did find the existence of spectral peaks -- spikes in the energy spectrum as specific energies. A few years later, Markey et. al. \cite{Markey_2010_PRL} examined a similar setup experimentally, varying the temporal separation by 0.75-2.5 ps. Interestingly, they found an enhancement in the peak proton energy with a 0.75 ps separation and energy ratio of 0.4:1 between the two pulses. They conducted 1D PIC simulations shown in \cref{fig:markey_spectrum} that verify this as well.
+As explained in \cref{sec:tnsa_opt}, there is generally an optimal level of pre-expansion of the target to maximize the \gls{TNSA} proton energies \cite{McKenna_2008_LaPB,Fuchs_2007_PRL}. While the pre-expansion could be due to a low contrast pulse, it could also be due to an artificially injected pre-pulse whose intensity and temporal delay are tunable. Robinson et. al. \cite{Robinson_2007_PPCF} first addresses the idea of using multiple high intensity 40 fs laser pulses with the first being one-tenth to one-quarter of the intensity of the second. They termed this novel two-stage process \emph{multiple pulse sheath acceleration}. This study found a reduction in peak proton energy through numerical simulations, but did find the existence of spectral peaks -- spikes in the energy spectrum as specific energies. A few years later, Markey et. al. \cite{Markey_2010_PRL} examined a similar setup experimentally, varying the temporal separation by 0.75-2.5 ps. Interestingly, they found an enhancement in the peak proton energy with a 0.75 ps separation and energy ratio of 0.4:1 between the two pulses. They conducted 1D PIC simulations shown in \cref{fig:markey_spectrum} that verify this as well.
 
 In 2018, Ferri et. al. \cite{Ferri_2018_PoP} re-examines the same question, but uses the same intensity for both pulses. He finds that ultimately, little to no delay is optimal and as the delay gets larger, the enhancement reduces to the single pulse result. He finds the acceleration process can be affected by the second pulse for time delays as long as $\SI{0.6}{\pico \second}$ for $\SI{3}{\micro \meter}$ targets and $\SI{1}{\pico \second}$ for $\SI{6}{\micro \meter}$ targets. 
 
